--- a/public/404.html
+++ b/public/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="">
     
     
-    <link rel="preload" href="/assets/css/0.styles.32133ca3.css" as="style"><link rel="preload" href="/assets/js/app.0d01c3bb.js" as="script"><link rel="preload" href="/assets/js/4.11d613bd.js" as="script"><link rel="prefetch" href="/assets/js/2.d8a5914c.js"><link rel="prefetch" href="/assets/js/3.45b594b7.js"><link rel="prefetch" href="/assets/js/5.bcf0f7e6.js"><link rel="prefetch" href="/assets/js/6.aeb43046.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.32133ca3.css">
+    <link rel="preload" href="/blog/assets/css/0.styles.73b5262e.css" as="style"><link rel="preload" href="/blog/assets/js/app.3ff33a94.js" as="script"><link rel="preload" href="/blog/assets/js/4.11d613bd.js" as="script"><link rel="prefetch" href="/blog/assets/js/2.d8a5914c.js"><link rel="prefetch" href="/blog/assets/js/3.45b594b7.js"><link rel="prefetch" href="/blog/assets/js/5.a1af1c25.js"><link rel="prefetch" href="/blog/assets/js/6.aeb43046.js">
+    <link rel="stylesheet" href="/blog/assets/css/0.styles.73b5262e.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.0d01c3bb.js" defer></script><script src="/assets/js/4.11d613bd.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/blog/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/blog/assets/js/app.3ff33a94.js" defer></script><script src="/blog/assets/js/4.11d613bd.js" defer></script>
   </body>
 </html>
